Screenshots are now rendered correctly and scrollbars as well. #319

--- a/_sass/_tiled-gallery.scss
+++ b/_sass/_tiled-gallery.scss
@@ -33,6 +33,9 @@
       box-shadow: 6px 0 0 0 #66A5E3, -6px 0 0 0 #66A5E3;
     }
   }
+  img {
+    max-height: 360px;
+  }
 }
 
 .tiled-gallery-inner {
